# gitcalver.org

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  Makefile  README.md  ROADMAP.md  check_css.py  check_links.py  go.mod  go.sum  lefthook.yml  lighthouserc.cjs  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/: renovate.json5
.github/workflows/: check.yml  daily-build.yml  zizmor.yml
fonts/: README.md  __init__.py  build.py  test_build.py
scripts/: build-social-card.mjs
site/: hugo.toml
site/assets/css/: main.css
site/assets/js/: main.js
site/content/: _index.md  compatibility.md  getting-started.md  go.md  spec.md
site/content/spec/: 0.1.md  0.2.md  _index.md
site/layouts/: .dir-locals.el  404.html  baseof.html  go.html  home.html  index.html  page.html  sitemap.xml
site/layouts/_default/: baseof.html  single.html
site/layouts/_markup/: render-codeblock.html  render-table.html
site/static/: _headers  _redirects  gitcalver.sh  go.html  robots.txt
site/static/css/: style.css
tests/: accessibility.mjs  interactions.mjs  metadata.mjs  worker-server.mjs  worker.mjs
