# Copyright © 2026 Michael Shields
# SPDX-License-Identifier: MIT

# Deps for the font build script (fonts/build.py). Not a distributable package —
# uv just materializes a venv so the build, Ruff, and ty all resolve fontTools,
# and uv.lock pins the woff2 toolchain for byte-reproducible output.
[project]
name = "gitcalver-fonts"
version = "0"
requires-python = "==3.14.6"
dependencies = [
  "fonttools[woff]==4.63.0",
  "brotli==1.2.0",
]

[dependency-groups]
dev = ["ruff", "ty"]

[tool.uv]
package = false
required-version = "==0.11.28"

# Mirrors the shared Ruff config in github.com/shields/right-answers: select
# every rule, then pare back the few that are noise or conflict with house style.
[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", # typing.Any
  "C90",    # cyclomatic complexity
  "D",      # pydocstyle (disable docstring rules)
  "PLR09",  # "too many" branches, arguments, etc.
  "S603",   # subprocess output
  "S607",   # subprocess using path
  "T201",   # print()
  "RUF001", # ambiguous Unicode character in string
  "RUF002", # ambiguous Unicode character in docstring
  "RUF003", # ambiguous Unicode character in comment
]
